--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,5 @@
-
 //scss的註解 1. '//'打包成css時不會被打包出去,別人看不到
-          //2. '/**/'則否,會保留在css
+//2. '/**/'則否,會保留在css
 // scss 繼承、function、mixin、for
 
 //bootstrap
@@ -37,15 +36,16 @@ $paddingLevel: 1.2;
   @return $baseLineHeight * $count;
 }
 
-@for $i from 0 through 5{
-  .level#{$i}{
+@for $i from 0 through 5 {
+  .level#{$i} {
     @include font($i);
     margin: line($i/2) auto;
   }
 }
 //-------------------------------------------------------
 html {
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -55,13 +55,15 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
   margin: 0;
 }
 
-a{
-  text-decoration: none!important;
+a {
+  text-decoration: none !important;
 }
 
 .button--green {
@@ -96,22 +98,41 @@ a{
 //全域變數
 $vue-color: #42b983;
 .container {
-  width:100vw;
-  background: linear-gradient(110deg, rgba(234, 161, 101,  0.4)42%, rgba(217, 211, 0, 0.5)65%);
-  background: -moz-linear-gradient(110deg, rgba(234, 161, 101, 1)42%, rgba(217, 211, 0, 0.8)65%);
-  background: -webkit-linear-gradient(110deg, rgba(234, 161, 101, 1)42%, rgba(217, 211, 0, 0.8)65%);
-  background: -o-linear-gradient(110deg, rgba(234, 161, 101, 1)42%, rgba(217, 211, 0, 0.8)65%);
+  width: 100vw;
+  background: linear-gradient(
+    110deg,
+    rgba(234, 161, 101, 0.4) 42%,
+    rgba(217, 211, 0, 0.5) 65%
+  );
+  background: -moz-linear-gradient(
+    110deg,
+    rgba(234, 161, 101, 1) 42%,
+    rgba(217, 211, 0, 0.8) 65%
+  );
+  background: -webkit-linear-gradient(
+    110deg,
+    rgba(234, 161, 101, 1) 42%,
+    rgba(217, 211, 0, 0.8) 65%
+  );
+  background: -o-linear-gradient(
+    110deg,
+    rgba(234, 161, 101, 1) 42%,
+    rgba(217, 211, 0, 0.8) 65%
+  );
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
+  padding: 20px;
   .title {
-    font-family: "Quicksand", "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; /* 1 */
+    font-family: "Quicksand", "Source Sans Pro", -apple-system,
+      BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+      sans-serif; /* 1 */
     display: block;
     font-weight: 300;
-    @include font(5)
-    color: $vue-color;
+    @include font(5) color: $vue-color;
     letter-spacing: 1px;
   }
   .subtitle {
@@ -125,7 +146,7 @@ $vue-color: #42b983;
   .links {
     padding-top: 15px;
   }
-  .test{
+  .test {
     margin: 10px 0;
   }
 }
